--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    margin: 0;
+    padding: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .btn-new-user{
+        margin-top: 7px !important;
   }
-  to {
-    transform: rotate(360deg);
+
+  .mb{
+        margin-bottom: 30px;
   }
-}
+  .mini-btn{
+      margin-right: 10px;
+  }
+
+  body{
+    background-color: #eee;
+  }
+  
+  .container{
+      /* margin-left: 300px;
+      transition: margin-left .2s ease-in; */
+      margin-left: 80px;
+  }
+  
+  .container.inactive{
+      /* margin-left: 80px; */
+  }
+  .label {
+    width: 100%;
+    text-align: left;
+  }
